[gd_scene load_steps=5 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://player/ui_player.tscn" type="PackedScene" id=2]

[sub_resource type="CapsuleMesh" id=1]
radius = 0.5
mid_height = 0.8

[sub_resource type="CapsuleShape" id=2]
radius = 0.5
height = 0.8

[node name="KinematicBody" type="KinematicBody"]
script = ExtResource( 1 )
camera = NodePath("CamRoot")
timer_network_update = NodePath("TimerNetworkUpdate")
tween_movement = NodePath("TweenMovement")
detect_chest = NodePath("DetectChest")

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.9, 0 )
shape = SubResource( 2 )

[node name="CamRoot" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.65563, 1.82668 )

[node name="Camera" type="Camera" parent="CamRoot"]

[node name="TimerNetworkUpdate" type="Timer" parent="."]
wait_time = 0.03
autostart = true

[node name="TweenMovement" type="Tween" parent="."]

[node name="DetectChest" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true
cast_to = Vector3( 0, 0, -2 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.85098, 0, 1, 1 )

[node name="Control" parent="." instance=ExtResource( 2 )]

[connection signal="timeout" from="TimerNetworkUpdate" to="." method="_on_TimerNetworkUpdate_timeout"]
